--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ h2.we{
 
 
 .t-lg {
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .navbar {
@@ -220,11 +220,11 @@ hr {
   animation: shake 1s;
 }
 
-.ful{
+.full{
   background-image: url(../Imagenes/banner.jpg);
   background-size: cover;
   width: 100%;
-  height: 100%;
+  height: 600px;
   background-repeat: no-repeat;
   
 }
